--- a/store/db/docker-compose.yml
+++ b/store/db/docker-compose.yml
@@ -4,8 +4,8 @@
       postgres:
         image: postgres:latest
         environment:
-          POSTGRES_USER: ${DB_USERNAME}
-          POSTGRES_PASSWORD: ${DB_PASSWORD}
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
           PGDATA: /data/postgres
         volumes:
           - postgres:/data/postgres
@@ -18,8 +18,8 @@
       pgadmin:
         image: dpage/pgadmin4
         environment:
-          PGADMIN_DEFAULT_EMAIL: ${DB_ADMIN_EMAIL}
-          PGADMIN_DEFAULT_PASSWORD: ${DB_PASSWORD}
+          PGADMIN_DEFAULT_EMAIL: admin@root.com
+          PGADMIN_DEFAULT_PASSWORD: root
         ports:
           - "8081:80"
         depends_on:
